<resources>
    <string name="app_name">QRoclock</string>
    <string name="action_settings">Settings</string>
    <string name="no_alarms">No Alarms</string>
    <string name="agree">Apply</string>
    <string name="disagree">Cancel</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="repeat_in">Repeat In</string>
    <string name="new_alarm">New Alarm</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="repeat">Repeat in...</string>
    <string name="ringtone">Ringtone</string>
    <string name="repeating">Repeating</string>
    <string name="delete">Delete</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="calibrate">calibrate</string>
    <string name="today">Today</string>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
