<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textlines"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="@color/material_deep_orange_A700"
            android:text="@string/repeat"
            android:padding="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/mondayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/monday"
        android:textColor="@android:color/primary_text_dark"
        android:buttonTint="@android:color/primary_text_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <CheckBox
        android:id="@+id/tuesdayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tuesday"
        android:textColor="@android:color/primary_text_dark"
        android:buttonTint="@android:color/primary_text_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <CheckBox
        android:id="@+id/wednesdayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wednesday"
        android:textColor="@android:color/primary_text_dark"
        android:buttonTint="@android:color/primary_text_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <CheckBox
        android:id="@+id/thursdayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/thursday"
        android:textColor="@android:color/primary_text_dark"
        android:buttonTint="@android:color/primary_text_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <CheckBox
        android:id="@+id/fridayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/friday"
        android:textColor="@android:color/primary_text_dark"
        android:buttonTint="@android:color/primary_text_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <CheckBox
        android:id="@+id/saturdayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/saturday"
        android:textColor="@android:color/primary_text_dark"
        android:buttonTint="@android:color/primary_text_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <CheckBox
        android:id="@+id/sundayCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sunday"
        android:textColor="@android:color/primary_text_dark"
        android:buttonTint="@android:color/primary_text_dark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

</LinearLayout>